integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/CostPilot_Project__c.object-meta.xml
<CustomObject>
    <description>A project, matter, engagement, case, or other unit of work whose AI usage is governed and attributed by CostPilot.</description>
    <label>CostPilot Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CostPilot Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>