integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/fields/CostPilot_Decision__c.field-meta.xml
<CustomField>
    <fullName>CostPilot_Decision__c</fullName>
    <label>CostPilot Decision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>