integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/fields/Estimated_AI_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AI_Cost__c</fullName>
    <label>Estimated AI Cost</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>