integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/fields/Last_AI_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_AI_Request__c</fullName>
    <label>Last AI Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>