integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>Stable business identifier sent to CostPilot. If blank, the integration can use the Salesforce record ID.</description>
    <externalId>true</externalId>
    <label>Project ID</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>