integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <label>Project Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>